2025-09-23T01:15:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17932972957 # 775
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-23
* notice: last 14d: unq all: 7 15
* notice: prev accum: outdated-unq outdated-all / unq all: 1100 1580 / 1115 1595
* notice: next accum: outdated-unq outdated-all / unq all: 1101 1581 / 1116 1596
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-09] / [2025-09-22]

2025-09-22T01:22:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17901814876 # 774
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-22
* notice: last 14d: unq all: 7 15
* notice: prev accum: outdated-unq outdated-all / unq all: 1100 1580 / 1113 1593
* notice: next accum: outdated-unq outdated-all / unq all: 1100 1580 / 1115 1595
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-09-21]

2025-09-21T01:22:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17887189079 # 773
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-21
* notice: last 14d: unq all: 6 13
* notice: prev accum: outdated-unq outdated-all / unq all: 1099 1579 / 1112 1592
* notice: next accum: outdated-unq outdated-all / unq all: 1100 1580 / 1113 1593
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-07] / [2025-09-20]

2025-09-20T01:13:39Z: