@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-23T01:15:47Z",
+  "timestamp" : "2025-09-24T01:16:11Z",
   "count_outdated" : 1581,
   "uniques_outdated" : 1101,
-  "count" : 1596,
-  "uniques" : 1116,
+  "count" : 1597,
+  "uniques" : 1117,
   "clones" : [
     {
       "timestamp": "2025-09-11T00:00:00Z",
@@ -106,6 +106,15 @@
     },
     {
       "timestamp": "2025-09-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
