@@ -1,5 +1,5 @@
 {
-  "count": 15,
+  "count": 16,
   "uniques": 7,
   "clones": [
     {
@@ -59,6 +59,11 @@
     },
     {
       "timestamp": "2025-09-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-24T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
