@@ -1,3 +1,12 @@
+2025-09-24T01:16:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17963377877 # 776
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-24
+* notice: last 14d: unq all: 7 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 1101 1581 / 1116 1596
+* notice: next accum: outdated-unq outdated-all / unq all: 1101 1581 / 1117 1597
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-09-24]
+
 2025-09-23T01:15:47Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17932972957 # 775
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-23
